Don't show the avatar bubble in Incognito

This is a regression in Refresh as the avatar button exists in Incognito
for badging but no avatar bubble should be brought up. The logic
previously depended on the avatar button not existing at all in
Incognito.

The change simply early returns before showing a menu if in Incognito.

Bug: chromium:863154
Change-Id: Ifd34b4722f5ecb41d84d376f34a9adf5cf930d06
Reviewed-on: https://chromium-review.googlesource.com/1135722
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Thomas Tangl <tangltom@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574749}
Former-commit-id: 3bb8e0e2f98fa7ac912b0051d452d86a0d1bb27f